--- a/app/src/main/res/layout/activity_saohb.xml
+++ b/app/src/main/res/layout/activity_saohb.xml
@@ -13,20 +13,10 @@
         android:orientation="vertical"
         android:padding="15dp">
 
-        <ImageView
-            android:textColor="#000"
-            android:layout_marginLeft="40dp"
-            android:layout_marginRight="40dp"
-            android:layout_marginTop="20dp"
-            android:id="@+id/imageview"
+        <SurfaceView
+            android:id="@+id/saohb_preview"
             android:layout_width="match_parent"
-            android:layout_height="160dp"
-            android:background="@mipmap/abc"
-            android:textColorHint="#000"
-            android:maxLines="1"
-            android:maxLength="11"
-            android:singleLine="true"
-            android:textSize="16sp" />
+            android:layout_height="wrap_content" />
 
 
 
