--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    >
-    <include layout="@layout/common_title_bar"/>
+    android:orientation="vertical">
+
+    <include layout="@layout/common_title_bar" />
+
     <LinearLayout
         android:id="@+id/email_login_form"
         android:layout_width="match_parent"
@@ -13,89 +14,93 @@
         android:padding="15dp">
 
         <Button
-            android:textColor="#000"
+            android:id="@+id/sousuo"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
             android:layout_marginLeft="40dp"
             android:layout_marginRight="40dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/biaoti_type"
-            android:id="@+id/sousuo"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
             android:hint="正在定位...."
-            android:textColorHint="#000"
-            android:maxLines="1"
             android:maxLength="11"
+            android:maxLines="1"
             android:singleLine="true"
+            android:textColor="#000"
+            android:textColorHint="#000"
             android:textSize="16sp" />
 
 
+    </LinearLayout>
 
-</LinearLayout>
     <LinearLayout
         android:id="@+id/email_login_form1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="15dp">
+
         <Button
             android:id="@+id/chb"
-            android:textColor="#000"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
             android:layout_marginLeft="80dp"
             android:layout_marginRight="80dp"
             android:layout_marginTop="20dp"
-            android:hint="藏红包"
-            android:textColorHint="#000"
+            android:background="@drawable/bg_common"
 
-            android:maxLines="1"
+            android:hint="藏红包"
             android:maxLength="11"
+            android:maxLines="1"
             android:singleLine="true"
-            android:textSize="16sp"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:background="@drawable/bg_common"/>
+            android:textColor="#000"
+            android:textColorHint="#000"
+            android:textSize="16sp" />
 
         <Button
             android:id="@+id/zhb"
-            android:textColor="#000"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
             android:layout_marginLeft="80dp"
             android:layout_marginRight="80dp"
             android:layout_marginTop="20dp"
+            android:background="@drawable/bg_common"
             android:hint="找红包"
-            android:textColorHint="#000"
-            android:maxLines="1"
             android:maxLength="11"
+            android:maxLines="1"
             android:singleLine="true"
-            android:textSize="16sp"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:background="@drawable/bg_common"/>
+            android:textColor="#000"
+            android:textColorHint="#000"
+            android:textSize="16sp" />
+
         <Button
             android:id="@+id/shb"
-            android:textColor="#000"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
             android:layout_marginLeft="80dp"
             android:layout_marginRight="80dp"
             android:layout_marginTop="20dp"
+            android:background="@drawable/bg_common"
             android:hint="扫红包"
-            android:textColorHint="#000"
-            android:maxLines="1"
             android:maxLength="11"
+            android:maxLines="1"
             android:singleLine="true"
-            android:textSize="16sp"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:background="@drawable/bg_common"/>
+            android:textColor="#000"
+            android:textColorHint="#000"
+            android:textSize="16sp" />
 
 
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="400dp">
+
         <ProgressBar
             android:id="@+id/progressbar"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_gravity="center"
-            android:visibility="gone"/>
+            android:visibility="gone" />
 
     </LinearLayout>
 </LinearLayout>
