--- a/app/src/main/res/layout/denglu.xml
+++ b/app/src/main/res/layout/denglu.xml
@@ -64,6 +64,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
             <TextView
+                android:id="@+id/forgetpass"
                 android:text="忘记密码？"
                 android:textSize="10sp"
                 android:textColor="#fff"
@@ -76,6 +77,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
             <TextView
+                android:id="@+id/register"
                 android:text="注册账号"
                 android:textSize="10sp"
                 android:textColor="#fff"
